--- a/menu-pizzamigo/web/css/pizza.css
+++ b/menu-pizzamigo/web/css/pizza.css
@@ -15,6 +15,7 @@
     /* font-family: 'Climate Crisis', cursive; */
     /* font-family: 'Righteous', cursive; */
     font-family: 'Rowdies', cursive;
+    font-size: 1.5rem;
     -webkit-text-stroke: 0.6px black;
 }
 .titulo{
