--- a/menu-pizzamigo/web/css/desayuno.css
+++ b/menu-pizzamigo/web/css/desayuno.css
@@ -10,6 +10,11 @@
     background-position: center;
     height: 100px;
 }
+.tablas{
+    background-image: url(../../tabla-de-desayuno.jpg);
+    background-position: center;
+    height: 100px;
+}
 .ms-6{
     margin-left: 8vh;
 }
@@ -24,5 +29,9 @@
     border-color: white;
     border: 2px solid;
     border-radius: 30px;
+
+}
+.titulo2{
+    -webkit-text-stroke: 1.7px black;
 
 }
