--- a/menu-pizzamigo/web/css/gaseosa.css
+++ b/menu-pizzamigo/web/css/gaseosa.css
@@ -1,5 +1,5 @@
 .gaseosa{
-    background-image: url(../../bebidas.jpg);
+    background-image: url(../../artem-beliaikin-rNQ3TFuLkQU-unsplash.jpg);
     background-position: center;
     background-size: cover;
     height: 100px;
