--- a/menu-pizzamigo/web/css/plato.css
+++ b/menu-pizzamigo/web/css/plato.css
@@ -1,7 +1,9 @@
 .fondo{
-    background-image: url(../../banner-alplato.jpg);
-    background-position: center;
+    background-image: url(../../davey-gravy-DmO662qvWO8-unsplash.jpg);
+    background-position:center;
     height: 100px;
+    background-repeat: no-repeat;
+    background-size: 55vh;
 }
 .titulo2{
     -webkit-text-stroke: 1.3px black;
