--- a/menu-pizzamigo/web/css/postre.css
+++ b/menu-pizzamigo/web/css/postre.css
@@ -1,5 +1,5 @@
 .fondo-postre{
-    background-image: url(../../postres.png);
+    background-image: url(../../aneta-voborilova-Rj1IWO8IozE-unsplash.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
