--- a/menu-pizzamigo/web/css/style.css
+++ b/menu-pizzamigo/web/css/style.css
@@ -23,3 +23,9 @@ font-size: 1rem;
     width: 19vh;
     height: 5vh;
  }
+ .logo-ingles{
+    width: 3vh;
+ }
+ .tit{
+    text-decoration: none;
+ }
