--- a/menu-pizzamigo/web/css/style.css
+++ b/menu-pizzamigo/web/css/style.css
@@ -8,7 +8,8 @@
     background-repeat: no-repeat;
     background-position: center;
     padding: 2px;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    /* font-weight: bolder; */
 }
 body{
     background-image: url(../../fondo2.jpg);
