--- a/menu-pizzamigo/web/css/tragos.css
+++ b/menu-pizzamigo/web/css/tragos.css
@@ -1,6 +1,6 @@
 .tragos{
-    background-image: url(../../akemy-mory-tUhCuctc_LU-unsplash.jpg);
-    background-position: bottom;
+    background-image: url(../../fondo-trago.jpg);
+    background-position: center;
     background-size: cover;
     height: 100px;
     
